<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anf_nav</name>
  <version>1.0.0</version>
  <description>Nav stack tutorial</description>
  <maintainer email="olivier.kermorgant@ec.nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>simple_launch</depend>
  <depend>map_simulator</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
